--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 group 'com.theaemogie'
@@ -9,28 +9,102 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+sourceCompatibility = 1.8
+
+ext {
+    lwjglVersion = '3.2.3'
+    imguiVersion = '1.81.2'
+    jomlVersion = '1.10.1'
+    lwjglNatives = 'natives-windows'
+
 }
 
-project.ext.lwjglVersion = "3.2.3"
-project.ext.jomlVersion = "1.10.1"
-project.ext.lwjglNatives = "natives-windows"
-
 dependencies {
+    implementation 'org.jetbrains:annotations:20.1.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    //region GSON
+    implementation "com.google.code.gson:gson:2.8.6"
+    //endregion
+
+    //region ImGui
+    implementation "io.github.spair:imgui-java-binding:$imguiVersion"
+    implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
+    implementation "io.github.spair:imgui-java-app:$imguiVersion"
+    implementation "io.github.spair:imgui-java-natives-windows:$imguiVersion"
+    //endregion
+
+    //region LWJGL
+
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
+
+    //GLFW
     implementation "org.lwjgl:lwjgl-glfw"
+
+    //Native File Dialog
     implementation "org.lwjgl:lwjgl-nfd"
+
+    //OpenAL
     implementation "org.lwjgl:lwjgl-openal"
+
+    //OpenGL
     implementation "org.lwjgl:lwjgl-opengl"
+
+    //STB
     implementation "org.lwjgl:lwjgl-stb"
+
+    //region Natives
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-nfd::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
+    //endregion
+
+    //joml
     implementation "org.joml:joml:${jomlVersion}"
+    //endregion
+}
+
+application {
+    setMainClassName("com.theaemogie.timble.Main")
+}
+
+def doRuns = tasks.register("doRuns") {
+    dependsOn clean
+    finalizedBy run
+}
+doRuns.configure {
+    group = "runs"
+    description = "Clean previous builds, then build and run."
+}
+def cleanRuns = tasks.register("cleanRuns"){
+    delete fileTree(".run").include("**/*.dat")
+    group = "runs"
+}
+
+//Fat jar
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.theaemogie.timble.Main',
+        )
+    }
+}
+
+task fatJar(type: Jar) {
+    manifest.from jar.manifest
+    classifier = 'all'
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    with jar
 }
