--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'application'
+    id 'java'
 }
 
 group 'com.theaemogie'
@@ -16,7 +16,6 @@ ext {
     imguiVersion = '1.81.2'
     jomlVersion = '1.10.1'
     lwjglNatives = 'natives-windows'
-
 }
 
 dependencies {
@@ -68,43 +67,7 @@ dependencies {
     implementation "org.joml:joml:${jomlVersion}"
     //endregion
 }
-
-application {
-    setMainClassName("com.theaemogie.timble.Main")
-}
-
-def doRuns = tasks.register("doRuns") {
-    dependsOn clean
-    finalizedBy run
-}
-doRuns.configure {
-    group = "runs"
-    description = "Clean previous builds, then build and run."
-}
 def cleanRuns = tasks.register("cleanRuns"){
     delete fileTree(".run").include("**/*.dat")
     group = "runs"
-}
-
-//Fat jar
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'com.theaemogie.timble.Main',
-        )
-    }
-}
-
-task fatJar(type: Jar) {
-    manifest.from jar.manifest
-    classifier = 'all'
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    } {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    with jar
 }
