TileSet parsing. (And some other random stuff)

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 /build/classes/java/main/
 /gradle/
 /src/main/resources/assets/textures/paint.net projects/sprites/
-/.run/
 /src/main/java/com/theaemogie/test/
+/exports/
+/src/main/resources/external/*
+/.run/*
