--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'scala'
 }
 
 group 'com.theaemogie'
@@ -19,11 +20,12 @@ ext {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:20.1.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.jetbrains',name: 'annotations', version: '20.1.0' //Annotations
+    testImplementation group: 'junit', name: 'junit', version: '4.12' //JUnit
+    implementation group: 'org.scala-lang', name: 'scala-library', version: '2.13.5' //Scala
 
     //region GSON
-    implementation "com.google.code.gson:gson:2.8.6"
+    implementation group: 'com.google.code.gson',name: 'gson', version: '2.8.6'
     //endregion
 
     //region ImGui
@@ -64,7 +66,7 @@ dependencies {
     //endregion
 
     //joml
-    implementation "org.joml:joml:${jomlVersion}"
+    implementation "org.joml:joml:$jomlVersion"
     //endregion
 }
 //def cleanRuns = tasks.register("cleanRuns"){
@@ -75,13 +77,13 @@ dependencies {
 jar {
     manifest {
         attributes("Manifest-Version": "1.0",
-                "Main-Class": "com.theaemogie.timble.Main");
+                "Main-Class": "com.theaemogie.timble.Main")
     }
 }
 
 task fatJar(type: Jar) {
     manifest.from jar.manifest
-    classifier = 'all'
+    archiveClassifier.set 'all'
     processResources.exclude("*")
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
